tests/ui/issues/issue-22599.stderr
error: unused variable: `a`
  --> $DIR/issue-22599.rs:8:19
   |
LL |     v = match 0 { a => 0 };
   |                   ^ help: if this is intentional, prefix it with an underscore: `_a`
   |
note: the lint level is defined here
  --> $DIR/issue-22599.rs:1:9
   |
LL | #![deny(unused_variables)]
   |         ^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

